package net.dskim.desingpattern.decorator;

abstract class CondimentsDecoratorBase extends BeverageBase {
	protected BeverageBase beverage;
}